--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "eslint": "^9.18.0",
     "postcss": "^8",
+    "prettier": "^3.4.2",
     "tailwindcss": "^3.4.1"
   }
 }
